test/pos/adt_even_0.msmt_
; Sorts
(declare-sort Peano 0)
(declare-sort Even 0)

; Constants




; Uninterpreted Functions
(declare-fun prop (@a0) @a1)

; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((_VV##1 Even)(p Even)(n Peano)) (=> (and (= (prop p) (mkEv (mkS (mkS n)))) (= (prop p) (mkEv mkZ))) (= (prop _VV##1) (mkEv n)))))
(constraint (forall ((_VV##2 Even)(p Even)(q Even)(m Peano)(n Peano)) (=> (and (= (prop q) (mkEv m)) (and (and (= (prop p) (mkEv (mkS (mkS n)))) (= (prop p) (mkEv (mkS (mkS m))))) (= _VV##2 q))) (= (prop _VV##2) (mkEv n)))))

