test/neg/adt_bin_0.msmt_
; Sorts
(declare-sort Binary 0)

; Constants




; Uninterpreted Functions
(declare-fun prop (@a0) @a1)
(declare-fun gibber (Int Int) Int)

; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((p Binary)(n Int)) (=> (and (= (gibber 2 3) 4) (and (= (prop p) (mkBin n)) (= (prop p) (mkBin 0)))) (or (= n 0) (= n 1)))))
(constraint (forall ((p Binary)(n Int)) (=> (and (= (gibber 2 3) 4) (and (= (prop p) (mkBin n)) (= (prop p) (mkBin 1)))) (= n 0))))

